--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light pb-0">
-    <a class="navbar-brand" href="#">Chris Kellogg</a>
+  <nav class="navbar navbar-expand-md navbar-light bg-dark pb-0">
+    <a class="navbar-brand text-white" href="#">Chris Kellogg</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#projects">Projects</a>
+          <a class="nav-link text-white active" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#about-me">About Me</a>
+          <a class="nav-link text-white active" href="#about-me">About Me</a>
         </li>
       </ul>
     </div>
@@ -37,18 +37,35 @@
 
   <hr />
 
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="align-self-center text-center absolute">
+        <h1 class="text-white">Chris Kellogg</h1>
+        <h3 class="text-white">Full Stack Web Development</h3>
+      </div>
+      <div class="col-12 px-0 text-center">
+        <img src="./images/michael-dziedzic-qDG7XKJLKbs-unsplash.jpg" class="img-fluid relative" alt="">
       </div>
     </div>
+  </div>
   </div>
 
   <div class="container" id="projects">
     <div class="row">
-      <div class="col-12">
-
+      <div class="col-12 mt-4">
+        <h3 class="text-center">Projects</h3>
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="" class="img-thumbnail" alt="">
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="" class="img-thumbnail" alt="">
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="" class="img-thumbnail" alt="">
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="" class="img-thumbnail" alt="">
       </div>
     </div>
   </div>
