--- a/index.html
+++ b/index.html
@@ -44,31 +44,48 @@
         <h3 class="text-white">Full Stack Web Development</h3>
       </div>
       <div class="col-12 px-0 text-center">
-        <img src="./images/michael-dziedzic-qDG7XKJLKbs-unsplash.jpg" class="img-fluid relative" alt="">
+        <img src="./images/michael-dziedzic-qDG7XKJLKbs-unsplash.jpg" class="img-fluid relative"
+          alt="Reflective sphere with surrounding patterns">
       </div>
     </div>
   </div>
   </div>
 
-  <div class="container" id="projects">
-    <div class="row">
+  <hr />
+
+  <div class="container-fluid bg-secondary" id="projects">
+    <div class="row px-5">
       <div class="col-12 mt-4">
-        <h3 class="text-center">Projects</h3>
+        <h3 class="text-center mb-3">Projects</h3>
       </div>
       <div class="col-12 col-md-6">
-        <img src="" class="img-thumbnail" alt="">
+        <a href="https://chris-fruit-clone.netlify.app/">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <h5 class="text-dark">Apple Clone</h5>
+        </a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="" class="img-thumbnail" alt="">
+        <a href="https://chris-fake-news.netlify.app/">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <h5 class="text-dark">Newsweek Clone</h5>
+        </a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="" class="img-thumbnail" alt="">
+        <a href="https://little-trip-clone.netlify.app/">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <h5 class="text-dark">Airbnb Clone</h5>
+        </a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="" class="img-thumbnail" alt="">
+        <a href="https://o2bnb-press-clone.netlify.app/">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <h5 class="text-dark">Airbnb Press Site Clone</h5>
+        </a>
       </div>
     </div>
   </div>
+
+  <hr />
 
   <div class="container" id="about-me">
     <div class="row">
@@ -78,11 +95,13 @@
     </div>
   </div>
 
+  <hr />
+
   <footer class="container">
-    <div class="row footerNav">
+    <div class="row footerNav pt-4">
       <div class="col-12">
         <h5 class="mb-3">
-          <a href="#"><i class="mr-3 fab fa-github"></i></a>
+          <a href="https://github.com/darksaber9999"><i class="mr-3 fab fa-github"></i></a>
           <a href="#"><i class="mr-3 fab fa-twitter"></i></a>
           <a href="#"><i class="mr-3 fab fa-linkedin"></i></a>
         </h5>
