--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-dark pb-0">
-    <a class="navbar-brand text-white" href="#">Chris Kellogg</a>
+    <a class="navbar-brand text-white d-none d-md-block" href="#">Chris Kellogg</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -60,25 +60,29 @@
       </div>
       <div class="col-12 col-md-6">
         <a href="https://chris-fruit-clone.netlify.app/">
-          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail"
+            alt="Thumbnail of Apple Clone website">
           <h5 class="text-dark">Apple Clone</h5>
         </a>
       </div>
       <div class="col-12 col-md-6">
         <a href="https://chris-fake-news.netlify.app/">
-          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail"
+            alt="Thumbnail of Newsweek Clone website">
           <h5 class="text-dark">Newsweek Clone</h5>
         </a>
       </div>
       <div class="col-12 col-md-6">
         <a href="https://little-trip-clone.netlify.app/">
-          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail"
+            alt="Thumbnail of Airbnb Clone website">
           <h5 class="text-dark">Airbnb Clone</h5>
         </a>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 pb-3">
         <a href="https://o2bnb-press-clone.netlify.app/">
-          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail" alt="">
+          <img src="./images/emily-morter-8xAA0f9yQnE-unsplash.jpg" class="img-thumbnail"
+            alt="Thumbnail of Airbnb Press Clone website">
           <h5 class="text-dark">Airbnb Press Site Clone</h5>
         </a>
       </div>
@@ -89,8 +93,17 @@
 
   <div class="container" id="about-me">
     <div class="row">
-      <div class="col-12">
-
+      <div class="col-12 mt-4 mb-3">
+        <h3 class="text-center mb-3">About Me</h3>
+        <p>Chris is an avid technology lover and enjoys learning all he can about new technologies and how it
+          can be used to help people and their projects. He has a lot of previous work experience in accounting as well
+          as various
+          other
+          retail positions. He is currently learning about full stack web development and beginning to cultivate a
+          career in it.<br>
+          <br>
+          You can contact him at any of the social links below.
+        </p>
       </div>
     </div>
   </div>
@@ -99,12 +112,15 @@
 
   <footer class="container">
     <div class="row footerNav pt-4">
-      <div class="col-12">
+      <div class="col-12 col-md-8">
         <h5 class="mb-3">
           <a href="https://github.com/darksaber9999"><i class="mr-3 fab fa-github"></i></a>
           <a href="#"><i class="mr-3 fab fa-twitter"></i></a>
           <a href="#"><i class="mr-3 fab fa-linkedin"></i></a>
         </h5>
+      </div>
+      <div class="col-12 col-md-4 text-md-right">
+        <small>&copy; 2021. All rights reserved.</small>
       </div>
     </div>
   </footer>
