--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a href="mailto:chris.kellogg@icloud.com"><i class="mr-3 fas fa-at"></i></a>
           <a href="https://github.com/darksaber9999" target="_blank" rel="noopener noreferrer"><i
               class="mr-3 fab fa-github"></i></a>
-          <a href="https://twitter.com/chriskellogg19" target="_blank" rel="noopener noreferrer"><i
+          <a href="https://twitter.com/christhatcodes" target="_blank" rel="noopener noreferrer"><i
               class="mr-3 fab fa-twitter"></i></a>
           <a href="https://www.linkedin.com/in/chris-kellogg-96256b15b/" target="_blank" rel="noopener noreferrer"><i
               class="mr-3 fab fa-linkedin"></i></a>
